--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@ Simultaneous theoretical and technological progress through the 20th century all
 
 Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. %% TODO this needs stylistic fixes
 %Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
-Three independent paradigms developed, as is described in the historical section: while \textit{photonic crystals} were inspired by the electron waves in crystals, \textit{metamaterials} were inspired by the electromagnetic waves in homogeneous materials. Early treatises of electrodynamics in media with negative or unusual parameters did not assume any structuring or other way of how these parameters should be achieved. Later they joined into one field, which is elaborated in this thesis.
+In the view of author, three independent paradigms developed, as is described in the historical section: while \textit{photonic crystals} were inspired by the electron waves in crystals, \textit{metamaterials} were inspired by the electromagnetic waves in homogeneous materials. Early treatises of electrodynamics in media with negative or unusual parameters did not assume any structuring or other way of how these parameters should be achieved. On behalf of natural development, the paradigms unified into one, an as such they are is elaborated in this thesis.
 
 The unifying concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure unit cell. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
 While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials. 
