--- a/title.tex
+++ b/title.tex
@@ -27,3 +27,5 @@ Department of Physical Electronics\\
 
 \thispagestyle{empty}
 
+
+I declare I elaborated this thesis by myself. All literary sources and publications I have used had been cited.
