--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,6 +11,11 @@
 %%   of the thesis
 %     --> 
 
+
+% TODO Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved.
+% TODO is this true? Uncomment or remove! ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
+
+
 %% NOTES: What was not discussed in the thesis
 %% quasicrystals, chiral media and gyrotropy, structures with nonlinearity or loss,    tunable structures
 
