--- a/intro.tex
+++ b/intro.tex
@@ -1,3 +1,5 @@
+% \newpage\vfill I declare I elaborated this thesis by myself. All literary sources and publications I have used had been cited.  \newpage 
+
 \section{Electromagnetic waves in periodic structures} %{{{
 The peculiar behaviour of light in periodic structures has attracted human attention for ages, long before anybody perceived that light is an \textit{electromagnetic wave} or that it is the \textit{periodicity} is responsible for the brilliant and irreproducible colours of opal gemstones and many living creatures, such as various beetles, butterflies or peacocks. 
 
@@ -44,12 +46,9 @@ The distinction of two widely recognized types of periodic structures, namely \t
 
 %}}}
 \paragraph{Experimental methods} %{{{
-As a part of the research several experiments in the terahertz laboratory were performed. This section is opened by a systematic review of the terahertz sources and detectors, followed by 
-%The fourth section gives an overview of the experimental techniques that were used to fabricate the samples and measure their response to a broadband terahertz impulse.
+As a part of the research several experiments in the terahertz laboratory were performed. This section is opened by a systematic review of the terahertz sources and detectors, followed by the description of the terahertz time-domain spectroscopy setup used in our laboratory for characterisation of the samples. 
 
-% TODO Where appropriate, we also investigated how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved.
-% TODO is this true? Uncomment or remove! ...   Attention  was also paid also to investigate the tunability of their properties depending on external parameters, such as temperature, electric and magnetic fields and illumination. %, i.e. to 
-
+The fabrication and characterisation of the titanium dioxide microspheres samples is described in detail, with particular emphasis on the newly developed technique of acoustic-wave assisted sorting on anisotropic sieves. The section is concluded by the description of laser micromachining of the sieves and of the metallic meshes, which were used as electromagnetic filters.
 
 %}}}
 \paragraph{Numerical methods} %{{{
