--- a/theory.tex
+++ b/theory.tex
@@ -1123,6 +1123,7 @@ PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 Any dielectric material can be used to fabricate a photonic crystal with a sizeable and robust complete photonic bandgap (CPBG) in three dimensions, as long as small metal inclusions can be added.
 
 %}}}
+
 \subsection{Applications of photonic crystals} 
 \paragraph{One-dimensional band-gap structures}%{{{
 \add{
@@ -1130,6 +1131,8 @@ At the band boundaries where $K=m\pi/a, m\in \mathbb Z$, all cells have the same
 %Photonic band-gaps are fundamentally different the band gaps arising from the individual resonances, and arae characteristic by not reducing the number of nodal planes 
 
 application of PBG
+
+One of the original motivations for constructing 
 }
 
 %}}}
@@ -1143,7 +1146,7 @@ High field concentration
 
 Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
 %}}}
-\paragraph{Photonic filters}%{{{
+\paragraph{Photonic fibers}%{{{
 
 %}}}
 
@@ -1236,7 +1239,6 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 
 %}}}
 
-
 \subsection{The boundary between metamaterials and photonic crystals} 
 \paragraph{Difference in the Bloch wavelength}%{{{
 Both the metamaterial (MM) and photonic crystal (PhC) concepts are inspired by solid-state physics, namely by theories of waves propagating in solids. The fundamental difference between these is historical - metamaterials are related to \textit{optical waves} propagating in the quasi-homogeneous crystal lattice, whereas the theory of photonic crystals was developed on the basis of \textit{electron waves} in the crystal lattice. The difference between electrons in solids and optical photons is in that the electron wavelength is similar to the inter-atomic distance ($\approx 10^{-10}$ m), demanding the use of the Bloch theorem, whereas the wavelength of light is four order of magnitude larger and the medium.
@@ -1278,7 +1280,7 @@ The desired properties of nonresonant structures are obtained by averaging the p
 		%but the mentioned difference has profound consequences on the behaviour of the structure. 
 		%}}}
 
-		note silveirinha2007metamaterial \cite{silveirinha2007metamaterial}
+		note \cite{silveirinha2007metamaterial}
 		resonant metamaterials operate in the 2nd BZ (or possibly even third or higher? )
 		Think over, note our paper dominec2014transition \cite{dominec2014transition}
 }
